Fixing multi-images layout issue

--- a/app/assets/stylesheets/store/components/_product_item.scss
+++ b/app/assets/stylesheets/store/components/_product_item.scss
@@ -71,7 +71,7 @@
       border: 1px solid lighten($body_text_color, 30);
       text-align: center;
       display: block;
-      width: 70px;
+      //width: 70px;
       height: 70px;
       @include opacity(0.7);
 
@@ -86,6 +86,7 @@
 
       img {
         padding: 11px;
+		height:  50px
       }
     }
 
